--- a/app/src/main/res/layout/fragment_prifile.xml
+++ b/app/src/main/res/layout/fragment_prifile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activities.ProfileActivity">
+    tools:context=".fragments.ProfileFragment">
 
     <LinearLayout
         android:id="@+id/profile_header_container"
