--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".activities.QuestionActivity">
+    tools:context=".fragments.QuestionFragment">
 
     <TextView
         android:id="@+id/description"
